--- a/week12/16puzzle_EN.html
+++ b/week12/16puzzle_EN.html
@@ -81,11 +81,11 @@
     <!-- 버튼 컨테이너 -->
     <div class="button-container">
         <!-- Undo 버튼 -->
-        <button class="button" id="undo-button" disabled>되돌리기</button>
+        <button class="button" id="undo-button" disabled>undo</button>
         <!-- Redo 버튼 -->
-        <button class="button" id="redo-button" disabled>다시 실행하기</button>
+        <button class="button" id="redo-button" disabled>redo</button>
         <!-- 셔플 버튼 -->
-        <button class="button" id="shuffle-button">셔플</button>
+        <button class="button" id="shuffle-button">shuffle</button>
     </div>
 
     <script>
