--- a/week13/binary.html
+++ b/week13/binary.html
@@ -21,6 +21,16 @@
         <div class="transToTexts Box">
             <h1>2.10진법 > 2진법 변환과정</h1>
             <div class="innerBox"></div>
+            <div id="dInputs">
+                <label>올림수:</label>
+                <div id="di1" style="display: inline; position: relative; right: 3px;"></div>
+                <br>
+                <label>입력1:</label>
+                <div id="di2" style="display: inline;"></div>
+                <br>
+                <label>입력2:</label>
+                <div id="di3" style="display: inline;"></div>
+            </div>
         </div>
         <div class="explanation Box">
             <h1>3.2진법 > 10진법 변환과정</h1>
