단계 5부터 수정해야함

--- a/week15/minesweeper.html
+++ b/week15/minesweeper.html
@@ -35,6 +35,7 @@
                 let checked = Array(arraySize); //닫힌상태 >> 0:not, 1:checked bomb
                 checked.fill(0);
                 let remainBombs=99;
+                let curTime = 0;
 
                 for (let i = 0; i < height; i++) {
                     for (let j = 0; j < width; j++) {
